--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,3 +25,17 @@
 .down-arrow {
   height: 12px;
 }
+
+.footer {
+  background-image: url("../images/footer-bg-pc.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50px 0 0 0;
+  background-color: #6070ff;
+  width: 100vw;
+  height: 100vh;
+}
+
+.color {
+  color: white;
+}
