--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,10 +13,10 @@
   height: 100vh;
 }
 
-.project-image {
+/* .project-image {
   width: 480px;
   height: 400px;
-}
+} */
 
 .right-arrow {
   height: 15px;
